<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/resultEd"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:hint="Result"
        android:layout_height="wrap_content"/>

 <EditText
     android:id="@+id/firstEd"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="num_1"/>

    <EditText
        android:id="@+id/secondEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="num_2"/>

<Button
    android:id="@+id/calculatePlus"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Calculate"/>

    <Button
    android:id="@+id/calculateDivide"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Calculate"/>


</LinearLayout>